--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,21 +1,15 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 sqlalchemy==2.0.23
-alembic==1.12.1
 psycopg2-binary==2.9.9
 pgvector==0.2.4
 redis==5.0.1
-openai==1.3.7
-pydantic==2.5.0
-pydantic-settings==2.1.0
-python-multipart==0.0.6
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
-httpx==0.25.2
-slack-sdk==3.26.1
-pytest==7.4.3
-pytest-asyncio==0.21.1
-pytest-mock==3.12.0
-black==23.11.0
-isort==5.12.0
-flake8==6.1.0
+python-multipart==0.0.6
+pydantic[email]==2.5.0
+alembic==1.12.1
+rq==1.15.1
+rq-scheduler==0.11.0
+openai==1.3.7
+loguru==0.7.2
